// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unit:preprocess > preprocess > should return character code chunk list (0) 1`] = `
[
  -13,
  null,
]
`;

exports[`unit:preprocess > preprocess > should return character code chunk list (1) 1`] = `
[
  -2,
  -1,
  null,
]
`;

exports[`unit:preprocess > preprocess > should return character code chunk list (2) 1`] = `
[
  -4,
  -5,
  -3,
  null,
]
`;

exports[`unit:preprocess > preprocess > should return character code chunk list (3) 1`] = `
[
  104,
  101,
  108,
  108,
  111,
  -2,
  119,
  111,
  114,
  108,
  100,
  null,
]
`;

exports[`unit:preprocess > preprocess > should return character code chunk list (4) 1`] = `
[
  45,
  45,
  100,
  101,
  98,
  117,
  103,
  61,
  116,
  114,
  117,
  101,
  32,
  45,
  45,
  112,
  105,
  122,
  122,
  97,
  45,
  116,
  121,
  112,
  101,
  32,
  109,
  101,
  97,
  116,
  32,
  45,
  45,
  115,
  109,
  97,
  108,
  108,
  null,
]
`;
